<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="보이기">
            <menu>
            <item
                android:id="@+id/checkFront"
                android:title="@string/menu_ckfbutton"
                app:actionViewClass="android.widget.CheckBox"
                android:checked="true" />

            <item
                android:id="@+id/checkRear"
                android:title="@string/menu_ckrbutton"
                app:actionViewClass="android.widget.CheckBox"
                android:checked="true" />
            </menu>
        </item>
    </group>


    <group android:checkableBehavior="single">
        <item android:title="메뉴">
            <menu>
                <item
                    android:id="@+id/nav_normal"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/title_normal" />
                <item
                    android:id="@+id/nav_event"
                    android:icon="@drawable/ic_dashboard_black_24dp"
                    android:title="@string/title_event" />
                <item
                    android:id="@+id/nav_parking"
                    android:icon="@drawable/ic_notifications_black_24dp"
                    android:title="@string/title_parking" />

            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="기타">
            <menu>
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/title_setting" />

                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_exit_to_app_white_24dp"
                    android:title="@string/title_exit" />


            </menu>
        </item>
    </group>

</menu>